<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddNewLocatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddPlace"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/CustomToolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="New Location" />


    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/toolbarAddPlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/constMain"
                app:layout_constraintVertical_bias="0"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/raleway_regular"
                    android:hint="@string/title"
                    android:inputType="textCapWords"
                    android:padding="16dp"
                    android:textColor="@color/primaryColor"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:fontFamily="@font/raleway_regular"
                    android:textColor="@color/primaryColor"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:inputType="textCapWords"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilDesc"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/raleway_regular"
                    android:textColor="@color/primaryColor"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:inputType="textCapWords"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@id/tilDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/location"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/raleway_regular"
                    android:textColor="@color/primaryColor"
                    android:padding="16dp"
                    android:layout_margin="16dp"
                    android:inputType="textCapWords"
                    android:textColorHint="@android:color/darker_gray"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/appCompatImageButton"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_margin="16dp"
                android:layout_marginTop="24dp"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_image_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tilLocation" />

            <TextView
                android:id="@+id/tvAddImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_an_image"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/primaryLightColor"
                android:textSize="20sp"
                android:fontFamily="@font/raleway_semibold"
                app:layout_constraintBottom_toBottomOf="@+id/appCompatImageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toEndOf="@+id/appCompatImageButton"
                app:layout_constraintTop_toTopOf="@+id/appCompatImageButton"
                app:layout_constraintVertical_bias="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_round_edge"
                android:text="Add"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatImageButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>